--- a/.github/workflows/build-publish-release.yml
+++ b/.github/workflows/build-publish-release.yml
@@ -29,11 +29,11 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       - id: get_tag_version
-        run: echo "::set-output name=VERSION::${GITHUB_REF#refs/tags/v}"
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
       - run: ./gradlew assemble
       - run: ./gradlew publish
         env:
-          ORG_GRADLE_PROJECT_version: ${{ steps.get_tag_version.outputs.VERSION }}
+          ORG_GRADLE_PROJECT_version: ${{ env.VERSION }}
           ORG_GRADLE_PROJECT_gradlePublishKey: ${{ secrets.GRADLE_PUBLISH_KEY }}
           ORG_GRADLE_PROJECT_gradlePublishSecret: ${{ secrets.GRADLE_PUBLISH_SECRET }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_SECRET_KEY }}
