Add end-to-end tests using Gradle TestKit

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 group=com.goncalossilva
 artifactId=useanybrowser
+version=0.0.0-SNAPSHOT
 
 # Publication properties.
 publicationDisplayName=Kotlin Resources Plugin
